client/signup/signup-header/style.scss
@import "@automattic/onboarding/styles/mixins";
@import "@automattic/typography/styles/fonts";

// A masterbar-like header just for
// the signup flow.
.signup-header {
	position: absolute;
	margin-top: 8px;
	inset-block-start: 0;
	inset-inline-start: 0;
	inset-inline-end: 0;
	z-index: -1;
	color: var(--color-text-inverted);

	// Hide the signup header on oauth
	// flows like Crowdsignal
	.layout:not(.dops) {
		display: none;
		pointer-events: none;
	}


	.wordpress-logo {
		height: 180px;
		width: 180px;
		fill: var(--color-text-inverted);
		margin: 0 auto;
		display: block;
		transition: transform 0.8s cubic-bezier(0.075, 0.82, 0.165, 1);
		transform: scale(0.13333);
		transform-origin: 50% 0;

		&.is-large {
			transform: scale(1) translateY(80px);
		}
	}

	h1 {
		@include onboarding-font-recoleta;
		position: absolute;
		color: var(--color-text);
		top: 20px;
		left: 56px;
		font-size: $font-body-large;
	}

	.signup-header__right {
		position: absolute;
		inset-block-start: 12px;
		inset-inline-end: 16px;
	}
}

.signup-header__overflow-banner {
	position: absolute;
	top: 0;
	left: 0;
	margin-top: 0;
	width: 100vw;
	height: 80px;
	z-index: -2;
	display: flex;
	justify-content: center;
	align-items: center;
	background-color: #0675c4;
	color: var(--color-text-inverted);

	.signup-header__overflow-banner-with-refund-period {
		font-size: var(--scss-font-body-small);

		.signup-header__overflow-banner-with-refund-period-icon,
		.signup-header__overflow-banner-with-refund-period-text {
			display: inline;
			vertical-align: middle;
		}

		&.is-mobile {
			max-width: 230px;
			text-align: center;
		}
	}
}

