fix overflow

--- a/client/signup/signup-header/style.scss
+++ b/client/signup/signup-header/style.scss
@@ -56,7 +56,7 @@
 	top: 0;
 	left: 0;
 	margin-top: 0;
-	width: 100vw;
+	width: 100%;
 	height: 80px;
 	z-index: -2;
 	display: flex;
